2014-12-10  Kaz Kylheku  <kaz@kylheku.com>

	Throwing away old dependency system.

	* Makefile (DEPGEN): New macro variable.
	(OPT_OBJS, DBG_OBJS): Define with := assignment.
	(OBJS): New variable.
	(dbg/%.o, opt/*.o): Use -MMD and -MT options of gcc to generate
	dependencies. Also use DEPGEN macro to rewrite each dependency
	makefile's rule into a DEP_ variable assignment.
	(DEP_INSTANTIATE): New macro variable.
	(include dep.mk): Removed, replaced by eval hack that
	includes all the .d files and instantiates the rule from
	the DEP_ variable in each one.
	(opt/lex.yy.o, dbg/lex.yy.o): We need to hard code the dependency
	of these on y.tab.h, to force that header to generate.
	(DEP_opt/lex.yy.o, DEP_dbg/lex.yy.o): New variables, related
	to above.
	(depend): Target removed.

	* dep.mk: File removed.

	* depend.txr: File removed.

2014-12-10  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (ABBREV): Rewrite to take advantage of DEP_
	variables to remove the dependencies from the output.
	(ABBREV2): No longer needed, removed.
	(dbg/%.o, opt/%.o, %.o): Just use ABBREV instead of ABBREV2; it does
	the right thing.  Dependency of objects on config.make removed.

2014-12-09  Kaz Kylheku  <kaz@kylheku.com>

	* Makefile (install-tests): Do not use option -c of
	cpio (use old ASCII format). This was unintentional.
	On extract, use -m option to preserve timestamps,
	like we do in INSTALL.

2014-12-09  Kaz Kylheku  <kaz@kylheku.com>

	Test output goes to tst/ now.

	* Makefile (TESTS_OUT): We don't need to refer to top_srcdir.
	Add the tst/ prefix to .out paths. Find must be used with -H
	because tests is a symlink for out-of-tree build directories.
	(tests/*): All target-specific assignments are moved to tst/tests/*
	paths, and top_srcdir is no longer used in the right hand side
	values.
	(%.out): Becomes (tst/%.out).
	(%.ok): need to compute .expected name from .out differently to
	account for tst/ prefix.
	(tests.clean): Just remove the tst directory.